--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -1,26 +1,65 @@
-.attribution { 
-  font-size: 11px; text-align: center; 
-}
-.attribution a { 
-  color: hsl(228, 45%, 44%); 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html {
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+body {
+  min-height: 100vh;
   background-color: hsl(212, 45%, 89%);
+  font-family: "Outfit", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   background-color: hsl(0, 0%, 100%);
-  border-radius: 10px;
+  border-radius: 20px;
+  padding: 1.3rem;
+  margin: 1.5rem;
   display: flex;
   flex-direction: column;
-
-}
-
-p {
-  font-size: 15px;
+  align-items: center;
+  box-shadow: 0 10px 5px hsl(212, 45%, 89%);
 }
 
 .qrcode {
+  max-width: 100%;
   border-radius: 10px;
+}
+
+.text {
+  padding: 1rem;
+}
+
+.header {
+  margin: 0.5rem 0;
+  font-weight: 700;
+  color: hsl(218, 44%, 22%);
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.description {
+  margin: 1rem 0;
+  font-size: 15px;
+  font-weight: 400;
+  color: hsl(220, 15%, 55%);
+  text-align: center;
+}
+
+@media (min-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
 }
