--- a/advice-generator-app-main/style.css
+++ b/advice-generator-app-main/style.css
@@ -17,41 +17,62 @@
 
 body {
     font-size: 28px;
+    font-family: "Manrope", sans-serif;
     background-color: var(--dark-blue);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
 
 .container {
-    background-color: var(--grayish-blue);
+    background-color: var(--dark-grayish-blue);
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
     border-radius: 10px;
-    max-width: 300px;
-}
-
-img {
-    height: 25px;
-    width: 25px;
-    margin: 1rem;
+    margin: 0 1.5rem;
+    /* height: 450px; */
 }
 
 .advice-title {
     color: var(--neon-green);
-    font-size: 1rem;
-    margin: 1rem;
+    font-size: 0.8rem;
+    margin: 2rem 0;
+    text-transform: uppercase;
 }
 
 .btn {
-    border: 1px solid white;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-color: var(--neon-green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem 0 0 0;
+    cursor: pointer;
+}
+
+.dice {
+    height: 20px;
+    width: 20px;
+}
+
+.btn:hover {
+    box-shadow: 2px 2px 25px 3px var(--neon-green);
 }
 
 .advice {
     color: var(--light-cyan);
-    margin: 1rem;
+    margin: 1rem 2rem;
+    font-weight: 800;
 }
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { font-size: 11px; text-align: center; color: white;}
+.attribution a { color: gray; }
+
+@media (min-width: 375px) {
+
+}
