--- a/advice-generator-app-main/style.css
+++ b/advice-generator-app-main/style.css
@@ -1,12 +1,12 @@
 :root {
-/* ### Primary */
---light-cyan: hsl(193, 38%, 86%);
---neon-green: hsl(150, 100%, 66%);
+    /* ### Primary */
+    --light-cyan: hsl(193, 38%, 86%);
+    --neon-green: hsl(150, 100%, 66%);
 
-/* ### Neutral */
---grayish-blue: hsl(217, 19%, 38%);
---dark-grayish-blue: hsl(217, 19%, 24%);
---dark-blue: hsl(218, 23%, 16%);
+    /* ### Neutral */
+    --grayish-blue: hsl(217, 19%, 38%);
+    --dark-grayish-blue: hsl(217, 19%, 24%);
+    --dark-blue: hsl(218, 23%, 16%);
 }
 
 * {
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-size: 28px;
+    font-size: 16px;
     font-family: "Manrope", sans-serif;
     background-color: var(--dark-blue);
     display: flex;
@@ -24,17 +24,23 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    text-align: center;
+    padding: 1.25rem;
 }
 
 .container {
-    background-color: var(--dark-grayish-blue);
+    /* background-color: var(--dark-grayish-blue);
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
-    border-radius: 10px;
-    margin: 0 1.5rem;
-    /* height: 450px; */
+    border-radius: 1rem;
+    margin: 0 1.5rem; */
+    background-color: var(--dark-grayish-blue);
+    padding: 1.25rem 0 3rem 0;
+    color: #ffffff;
+    border-radius: 1.25rem;
+    position: relative;
 }
 
 .advice-title {
@@ -42,18 +48,29 @@ body {
     font-size: 0.8rem;
     margin: 2rem 0;
     text-transform: uppercase;
+    letter-spacing: 0.5rem;
 }
 
 .btn {
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
+    /* border-radius: 50%;
+    border: none;
     background-color: var(--neon-green);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1.5rem 0 0 0;
     cursor: pointer;
+    padding: 1.25rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%); */
+
+    background-color: var(--neon-green);
+    padding: 1.2rem;
+    border: none;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -2rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .dice {
@@ -69,10 +86,21 @@ body {
     color: var(--light-cyan);
     margin: 1rem 2rem;
     font-weight: 800;
+    font-size: 28px;
 }
-.attribution { font-size: 11px; text-align: center; color: white;}
-.attribution a { color: gray; }
 
-@media (min-width: 375px) {
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    color: white;
+}
 
+.attribution a {
+    color: gray;
+}
+
+@media (min-width: 500px) {
+    .container {
+        max-width: 480px;
+    }
 }
